--- a/typescript_to_java.html
+++ b/typescript_to_java.html
@@ -5,10 +5,10 @@
 	</head>
 <body onload>
 	
-<h1><a href="https://github.com/jarble/typeScript-to-glsl">TypeScript to glsl</a></h1>
+<h1><a href="https://github.com/jarble/typeScript-to-java">TypeScript to Java</a></h1>
 <h2>TypeScript input:</h2>
 <textarea id="my-input" cols="40" rows="5" placeholder="Type something here"></textarea>
-<h2>GLSL output:</h2>
+<h2>Java output:</h2>
 <textarea id="outputText" readonly cols="40" rows="5" placeholder="See output here"></textarea>
 </label>
 <p>You can test the compiled output on <a href="https://www.shadertoy.com/new">Shadertoy.</a></p>
