--- a/typescript_to_java.html
+++ b/typescript_to_java.html
@@ -11,7 +11,7 @@
 <h2>Java output:</h2>
 <textarea id="outputText" readonly cols="40" rows="5" placeholder="See output here"></textarea>
 </label>
-<p>You can test the compiled output on <a href="https://www.shadertoy.com/new">Shadertoy.</a></p>
+<p>You can test the compiled output on <a href="https://www.programiz.com/java-programming/online-compiler/">here.</a></p>
 
 <script>
 		// Get the input box
